--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,18 @@
 * {
-    margin: 0 auto;
-    padding: 0 auto;
-    outline: 0 auto;
+    margin: 0 ;
+    padding: 0 ;
+    outline: 0 ;
+    box-sizing: border-box;
+}
+:root {
+    --mainColor: #557153;
+    --secondColor: #7D8F69;
+    --thirdColor: #A9AF7E;
+    --brakerColor: #E6E5A3;
+}
+h3 {
+    display: block;
+}
+h2 {
+    text-align: center;
 }
